# taskmd

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HERMES.md  LICENSE  README.md  SECURITY.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py  todo.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
server/: main.py
server/api/: router.py
server/domain/: models.py  schemas.py  task_service.py
server/infrastructure/: file_repository.py  git_service.py  markdown_parser.py  markdown_writer.py
tests/: test_domain_models.py  test_id_generation.py  test_integration.py  test_markdown_roundtrip.py  test_task_service.py
