[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmd"
version = "0.1.0"
description = "Markdown-native kanban with temporal columns and an aging counter"
license = "MIT"

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
